--- a/css/style.css
+++ b/css/style.css
@@ -2315,8 +2315,8 @@ section.contact_main {
     align-items: center;
     padding: 10px;
     border-radius: 10px;
-    bottom: 2rem;
-    left: 2rem;
+    bottom: 1rem;
+    right: 1rem;
     gap: 10px;
 }
 
@@ -2330,7 +2330,7 @@ section.contact_main {
     font-size: 60px;
     line-height: 100%;
     color: #3C281E;
-    margin: 50px 0;
+    margin: 30px 0;
 }
 
 .contact_main .contact_whatsapp h3 {
@@ -2366,10 +2366,8 @@ section.contact_main {
 
 .contact_ryt .submit_contact {
     background: #3C281E;
-    width: 35%;
     padding: 10px 0;
     color: #fff;
-    margin: 30px 0;
 }
 
 .contact_ryt form .form_flex {
@@ -3278,7 +3276,7 @@ section.contact_main {
 
     /* contact Page */
     .contact_main .contact_ryt {
-        padding: 0 20px;
+        padding: 0 20px 20px;
     }
 
     .contact_ryt h2 {
