--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ img {
 }
 
 .bmi-header nav .links .main-links {
-    gap: 44px;
+    gap: 38px;
 }
 
 .bmi-header nav .links>div {
@@ -307,7 +307,7 @@ img {
 /* Underline Effect Only for Text Links */
 .bmi-header nav .links a:not(:has(img)) {
     display: block;
-    font-size: 17px;
+    font-size: 16px;
     color: #000;
     text-decoration: none;
     position: relative;
@@ -371,7 +371,7 @@ img {
     list-style: none;
     padding: 10px 0;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 200px;
 }
 
 .bmi-header .dropdown-parent:hover .dropdown {
@@ -424,6 +424,7 @@ header.bmi-header {
     background: transparent;
     border: 0;
     font-family: 'PublicSans-Medium';
+    font-size: 12px;
 }
 
 .bmi-header .mobile_carts {
@@ -523,7 +524,8 @@ section.copyryt_main {
 /* main pages */
 /* Banner Section */
 section.banner-section {
-    background-image: linear-gradient(45deg, #E7D6C6, #E9E2CF);
+    /* background-image: linear-gradient(45deg, #E7D6C6, #E9E2CF); */
+    background: #FFF9EB;
     padding-top: 0;
 }
 
@@ -572,11 +574,116 @@ section.banner-section {
     width: 94%;
 }
 
+.homebanner_slider .owl-dots {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 /* caregort_sec */
 section.categories_sec {
     background: #FFF9EB;
     padding: 70px 0;
 }
+
+.collection_main .social {
+    display: none;
+    list-style: none;
+    padding: 0;
+    margin: 20px 0 0 0;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    opacity: 0;
+    transform: translateY(-20px);
+    pointer-events: none;
+    transition: all 0.4s ease;
+    position: absolute;
+    bottom: 1rem;
+    right: -1rem;
+    z-index: 2;
+}
+
+.collection_main .social.active {
+    display: flex;
+    width: 100%;
+    position: absolute;
+    bottom: 1rem;
+    right: -1rem;
+    text-align: right;
+    opacity: 1;
+    pointer-events: auto;
+    padding: 0;
+    justify-content: end;
+    gap: 10px;
+    transition: all 0.4s ease;
+}
+
+.collection_main .social li i {
+    list-style: none;
+    background: #EFEFEF;
+    color: #8D8D8D;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 22px;
+}
+
+.fa-heart {
+    color: red;
+}
+
+.collection_main .social li i.fa-x-twitter {
+    color: #000;
+    font-size: 20px;
+    transform: translateY(-13px);
+}
+
+.collection_main .social li i.fa-linkedin-in {
+    color: #0077B5;
+}
+
+.collection_main .social li i.fa-square-facebook {
+    color: #3b5998;
+}
+
+.collection_main .social li {
+    list-style: none;
+}
+
+.product_listshare {
+    position: relative;
+}
+
+.collection_main .share {
+    color: #000;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.collection_main .social li a:hover {
+    opacity: 0.8;
+}
+
+.listing_detail .listing_quality {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding-right: 10px;
+    /* position: absolute;
+    top: 1rem;
+    z-index: 3;
+    right: 0.5rem; */
+}
+
+.listing_detail .listing_quality i {
+    font-size: 20px;
+    /* background: #EFEFEF;
+    padding: 7px 5px 4px;
+    border-radius: 50px; */
+}
+
+
 
 section.section_bg::before {
     position: absolute;
@@ -702,7 +809,6 @@ section.section_bg .container {
 /* main cotegory */
 .main_categori .catergory_row {
     display: flex;
-    gap: 10px;
     text-align: center;
     margin-top: 50px;
     width: 100%;
@@ -719,6 +825,7 @@ section.section_bg .container {
     position: absolute;
     content: '';
     z-index: 1;
+    left: 0;
     width: 100%;
     height: 100%;
     border-radius: 100px 100px 0 0;
@@ -938,6 +1045,66 @@ section.free-quote::before {
 }
 
 /* six thing */
+
+
+.sixmain_thing::before {
+    position: absolute;
+    content: '';
+    background-image: url(../image/about_thing1.png);
+    width: 10%;
+    height: 100%;
+    z-index: 1;
+    background-repeat: no-repeat;
+    top: 0;
+    background-size: 100%;
+    left: 0;
+}
+
+.sixmain_thing::after {
+    position: absolute;
+    content: '';
+    background-image: url(../image/about_thing2.png);
+    width: 10%;
+    height: 100%;
+    z-index: 1;
+    background-repeat: no-repeat;
+    top: 0;
+    background-size: 100%;
+    right: 0;
+}
+
+.sixmain_thing .about_servithig {
+    position: relative;
+}
+
+.sixmain_thing .about_servithig::before {
+    position: absolute;
+    content: '';
+    background-image: url(../image/about_thing3.png);
+    width: 10%;
+    height: 100%;
+    z-index: 1;
+    background-repeat: no-repeat;
+    bottom: 0;
+    background-size: 100%;
+    left: 0;
+    background-position: bottom;
+}
+
+.sixmain_thing .about_servithig::after {
+    position: absolute;
+    content: '';
+    background-image: url(../image/about_thing4.png);
+    width: 10%;
+    height: 100%;
+    z-index: 1;
+    background-repeat: no-repeat;
+    bottom: 0;
+    background-size: 100%;
+    right: 0;
+    background-position: bottom;
+}
+
 .sixmain_thing .define_thing {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -1481,6 +1648,7 @@ section.get-intouch {
 .collection_main .collect_item {
     width: 25%;
     padding: 5px !important;
+    position: relative;
 }
 
 .product_inspir .inspir_slide .item {
@@ -1495,9 +1663,15 @@ section.get-intouch {
     font-family: 'PublicSans-SemiBold';
     font-weight: 700;
     font-size: 15px;
-    line-height: 28px;
     letter-spacing: -0.4px;
-    margin: 10px 0 30px;
+}
+
+.collect_item .listing_detail {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 15px 0 40px;
+    /* position: relative; */
 }
 
 .collect_item .collect_imag {
@@ -1553,17 +1727,18 @@ section.get-intouch {
 .banner-collection .banner_content {
     background: #FFF9EB;
     width: 60%;
-    margin: auto;
     padding: 50px 50px 70px;
-    bottom: 20%;
+    bottom: 0;
     position: absolute;
     left: 0;
     right: 0;
     text-align: center;
+    top: 0;
+    margin: 30px auto;
 }
 
 .banner-collection img {
-    height: 600px;
+    height: 400px;
     object-fit: cover;
 }
 
@@ -1687,7 +1862,7 @@ section.recent_viewsec h3.recent_text {
     font-size: 33px;
     line-height: 44px;
     letter-spacing: -0.5px;
-    padding: 25px 0 15px;
+    padding: 5px 0 5px;
     color: #3C281E;
 }
 
@@ -1729,7 +1904,7 @@ section.recent_viewsec h3.recent_text {
 
 .product_color i {
     background: #fff;
-    padding: 1px 3px 1px 2px;
+    padding: 1px 3px 0px 2px;
     border-radius: 5px;
     border: 1px solid #000;
 }
@@ -1837,6 +2012,72 @@ section.detail_sec {
     gap: 10px;
     margin: 20px 0 10px;
 }
+
+.detail_bredcrmb .collect_item i {
+    font-size: 20px;
+    color: rgb(129, 129, 129);
+}
+
+.detail_main .detail_bredcrmb {
+    display: flex;
+    align-items: center;
+    width: 90%;
+    margin-bottom: 10px;
+}
+
+.detail_bredcrmb .share {
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.detail_bredcrmb .social {
+    list-style: none;
+    padding: 0;
+    margin: 20px 0 0 0;
+    justify-content: center;
+    gap: 15px;
+    opacity: 0;
+    transform: translateY(-20px);
+    pointer-events: none;
+    transition: all 0.4s ease;
+    display: flex;
+    width: 100%;
+    position: absolute;
+    bottom: -4rem;
+    right: -3rem;
+    width: 180px;
+    background: #fff;
+    padding: 10px;
+}
+
+.detail_bredcrmb .social.active {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
+}
+
+
+.detail_bredcrmb .social li i {
+    list-style: none;
+    padding: 4px 5px;
+    border-radius: 5px;
+    font-size: 30px;
+    border: 1px solid;
+}
+
+.detail_bredcrmb .social li i.fa-x-twitter {
+    color: #000;
+    font-size: 28px;
+}
+
+.detail_bredcrmb .social li i.fa-linkedin-in {
+    color: #0077B5;
+}
+
+.detail_bredcrmb .social li i.fa-square-facebook {
+    color: #3b5998;
+}
+
 
 /* About Us Page */
 section.sixmain_thing.about-sixthing {
@@ -2150,6 +2391,24 @@ section.blog_category h2 {
 }
 
 /* detail Page */
+.bloglist_slider .item .row>div,
+.listing_allblog .col-lg-6.left {
+    position: relative;
+}
+
+.blog_like {
+    position: absolute;
+    right: 2rem;
+    top: 1rem;
+}
+
+.blog_like i {
+    font-size: 20px;
+    background: #EFEFEF;
+    padding: 7px 5px 5px 6px;
+    border-radius: 50px;
+}
+
 .blog_admin .first_admin img {
     width: 50px;
 }
@@ -2318,15 +2577,15 @@ section.contact_main {
 }
 
 .contact_main .contact_whatsapp {
+    top: 45%;
     background: #FFF9EB;
     position: absolute;
     display: flex;
-    align-items: center;
     padding: 10px;
     border-radius: 10px;
-    bottom: 1rem;
-    right: 1rem;
     gap: 10px;
+    align-items: center;
+    left: 25%;
 }
 
 .contact_whatsapp i {
@@ -2405,6 +2664,10 @@ section.contact_main {
         height: 750px;
         object-fit: cover;
     }
+
+    .bmi-header nav .links .main-links {
+        gap: 32px;
+    }
 }
 
 
@@ -2412,10 +2675,11 @@ section.contact_main {
 
     .bmi-header nav .links,
     .bmi-header nav .links>div {
-        gap: 30px !important;
+        gap: 25px !important;
     }
 
     /* main css */
+
     .category_innr3 .category_manifact {
         width: 55%;
         top: 10%;
@@ -2462,10 +2726,15 @@ section.contact_main {
 
     .bmi-header nav .links,
     .bmi-header nav .links>div {
-        gap: 20px !important;
+        gap: 15px !important;
     }
 
     /* main Page */
+
+    .bmi-header nav .links a:not(:has(img)) {
+        font-size: 13px;
+    }
+
     .subtext {
         width: 100%;
     }
@@ -2528,9 +2797,6 @@ section.contact_main {
 }
 
 @media screen and (max-width: 1100px) {
-    .bmi-header nav .links a:not(:has(img)) {
-        font-size: 13px;
-    }
 
     .bmi-header .links .login-link::before {
         top: -0.3rem;
@@ -2654,7 +2920,7 @@ section.contact_main {
         color: #000;
         list-style: none;
         padding: 10px 0;
-        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: unset;
     }
 
     .bmi-header .links li {
@@ -2711,14 +2977,6 @@ section.contact_main {
 
     .explore_btn .btn {
         max-width: 170px;
-    }
-
-    .main_categori .catergory_row {
-        flex-wrap: wrap;
-    }
-
-    .catergory_row .collect_items {
-        width: 32%;
     }
 
     .category_innr3 .category_manifact {
@@ -2821,16 +3079,10 @@ section.contact_main {
 
     .banner-collection .banner_content {
         width: 90%;
-        bottom: 17%;
     }
 
     .banner-collection .banner_content h1 {
         font-size: 45px;
-    }
-
-    .banner-collection img {
-        height: 500px;
-        object-fit: cover;
     }
 
     /* Detail Page */
@@ -3050,6 +3302,7 @@ section.contact_main {
     /* footer */
 
     /* main page */
+
     .get-touch .touch-innr {
         width: 100%;
     }
@@ -3074,10 +3327,6 @@ section.contact_main {
     .subtext {
         font-size: 14px;
         line-height: 25px;
-    }
-
-    .catergory_row .collect_items {
-        width: 48%;
     }
 
     .latest_sec .latest_main,
@@ -3176,6 +3425,15 @@ section.contact_main {
 
     /* listing Page */
     .banner-collection .banner_content {
+        bottom: auto;
+    }
+
+    .banner-collection img {
+        height: 350px;
+        object-fit: cover;
+    }
+
+    .banner-collection .banner_content {
         padding: 10px 15px 50px;
     }
 
@@ -3210,7 +3468,7 @@ section.contact_main {
     .detail_lftcont .product_size p {
         width: 48%;
         text-align: center;
-        font-size: 15px;
+        font-size: 12px;
         padding: 6px 20px;
     }
 
@@ -3339,7 +3597,7 @@ section.contact_main {
     .banner-section .banner_content h1 {
         margin-top: 10px;
         line-height: 37px;
-        font-size: 28px;
+        font-size: 25px;
     }
 
     .banner-section .banner_content p {
@@ -3407,11 +3665,6 @@ section.contact_main {
     /* Listing Page */
     .collection_main .collect_item {
         width: 100%;
-    }
-
-    .banner-collection img {
-        height: 400px;
-        object-fit: cover;
     }
 
     .collection_main .collect_item h3 {
