--- a/css/style.css
+++ b/css/style.css
@@ -2593,9 +2593,12 @@ section.contact_main {
     position: absolute;
     border-radius: 10px;
     align-items: center;
-    left: 25%;
     text-align: center;
-    padding: 50px 30px;
+    padding: 30px 0px;
+    width: 35%;
+    margin: auto;
+    left: 0;
+    right: 0;
 }
 
 .contact_whatsapp i {
@@ -2618,6 +2621,7 @@ section.contact_main {
     line-height: 27.16px;
     letter-spacing: -0.3px;
 }
+
 
 .contact_main .contact_whatsapp p {
     font-family: 'Gilroy-Regular';
@@ -3743,15 +3747,8 @@ section.contact_main {
     }
 
     .contact_main .contact_whatsapp {
-        left: 0;
-        gap: 10px;
-        display: flex;
-        margin: auto;
-        right: 0;
-        padding: 10px;
-        width: 90%;
-        text-align: left;
-        justify-content: center;
+        width: 60%;
+        top: 25%;
     }
 
     .contact_main .contact_whatsapp p {
@@ -3767,10 +3764,6 @@ section.contact_main {
 @media screen and (max-width: 375px) {
     .copy-sec .copy-lft a {
         font-size: 10px;
-    }
-
-    .contact_main .contact_whatsapp {
-        width: 95%;
     }
 
 
