--- a/css/style.css
+++ b/css/style.css
@@ -2598,6 +2598,7 @@ section.contact_main {
     width: 35%;
     margin: auto;
     left: 0;
+    z-index: 2;
     right: 0;
 }
 
@@ -2661,6 +2662,16 @@ section.contact_main {
 
 .contact_ryt form .form_flex>div {
     width: 50%;
+}
+
+.contact_main .contact_lft::before {
+    background-color: #00000040;
+    position: absolute;
+    content: '';
+    z-index: 1;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 
